--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 	font-size: .875rem;
 	line-height: 1.6;
 	word-wrap: break-word;
-	background-image: url(http://bgrounds.ru/_include/img/bgs/ornamic/black-ornamic.png);
+	background-image: url(https://www.colourbox.com/preview/7092402-science-doodles-collection.jpg);
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -120,7 +120,7 @@ body {
 
 .btn:hover {
 	color: #fff;
-	background: #e64946;
+	background: #0000CD;
 }
 
 /* Animation */
@@ -181,7 +181,7 @@ a {
 }
 
 a:hover {
-	color: #e64946;
+	color: #0000CD;
 }
 
 hr {
@@ -287,7 +287,7 @@ blockquote {
 	margin: 0 0 20px;
 	margin: 0 0 1.25rem;
 	line-height: 1.6;
-	border-left: 5px solid #e64946;
+	border-left: 5px solid #0000CD;
 }
 
 blockquote p:last-child {
@@ -444,14 +444,14 @@ select {
 	font-size: .875rem;
 	font-weight: 700;
 	line-height: 1;
-	color: #e64946;
+	color: #0000CD;
 	border-top: 1px solid #ebebeb;
 }
 
 .divider {
 	height: 5px;
 	margin: 0;
-	background: #e64946;
+	background: #0000CD;
 	border: 0;
 }
 
@@ -513,15 +513,15 @@ select {
 }
 
 .opened.menu__list {
-	border-top: 1px solid #e64946;
+	border-top: 1px solid #0000CD;
 }
 
 .menu__item:hover {
-	background: #e64946;
+	background: #0000CD;
 }
 
 .menu__item--active {
-	background: #e64946;
+	background: #0000CD;
 }
 
 .menu__item:first-child {
@@ -543,7 +543,7 @@ select {
 
 	.menu {
 		min-height: 42px;
-		border-bottom: 5px solid #e64946;
+		border-bottom: 5px solid #0000CD;
 	}
 
 	.menu__item {
@@ -585,7 +585,7 @@ select {
 }
 
 .meta a:hover {
-	color: #e64946;
+	color: #0000CD;
 }
 
 .meta .icon {
@@ -633,12 +633,12 @@ select {
 .post__content a,
 .warning a {
 	font-weight: 700;
-	color: #e64946;
+	color: #0000CD;
 }
 
 .post__content a:hover,
 .warning a:hover {
-	color: #e64946;
+	color: #0000CD;
 	text-decoration: underline;
 }
 
@@ -712,7 +712,7 @@ select {
 }
 
 .tags__item:hover {
-	background: #e64946;
+	background: #0000CD;
 }
 
 .tags__link,
@@ -727,7 +727,7 @@ select {
 	height: 32px;
 	padding: 8px;
 	margin-right: 6px;
-	background: #e64946;
+	background: #0000CD;
 	fill: #fff;
 }
 
@@ -806,7 +806,7 @@ select {
 .pagination__item:hover,
 .pagination__item--current {
 	color: #fff;
-	background: #e64946;
+	background: #0000CD;
 }
 
 /* Post Navigation */
@@ -899,7 +899,7 @@ input[type=email]:hover,
 input[type=tel]:hover,
 input[type=url]:hover,
 textarea:hover {
-	border: 1px solid #e64946;
+	border: 1px solid #0000CD;
 }
 
 input[type=submit] {
@@ -910,7 +910,7 @@ input[type=submit] {
 	color: #fff;
 	text-transform: uppercase;
 	cursor: pointer;
-	background: #e64946;
+	background: #0000CD;
 	border: 0;
 	-webkit-transition: all .1s linear;
 	-moz-transition: all .1s linear;
@@ -946,7 +946,7 @@ textarea {
 	font-size: 16px;
 	font-size: 1rem;
 	text-transform: uppercase;
-	border-bottom: 3px solid #e64946;
+	border-bottom: 3px solid #0000CD;
 }
 
 .widget__item {
